Later still, i fixed wrap

--- a/2/css/game.css
+++ b/2/css/game.css
@@ -32,9 +32,6 @@ body {
 	flex-direction: column;
 		-webkit-flex-direction: column;
 		-ms-flex-direction: column;
-	flex-wrap: wrap;
-		-webkit-flex-wrap: wrap;
-		-ms-flex-wrap: wrap;
 	width: 60%;
 	height: 100%;
 	margin: 0 auto 0 auto;
